# bigbedbot-mirai-http

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  core.cpp  core.h  logger.cpp  logger.h  main.cpp  modules.cpp  time_evt.cpp  time_evt.h
app/: CMakeLists.txt  README.md  apievent.cpp  apievent.h  case.cpp  case.h  case_def.cpp  eat.cpp  eat.h  eatwhat.cpp  eatwhat.h  event_case.cpp  event_case.h  gambol.cpp  gambol.h  help.cpp  help.h  monopoly.cpp  monopoly.h  pch.h  playwhat.cpp  playwhat.h  smoke.cpp  smoke.h  tools.cpp  tools.h  weather.cpp  weather.h
app/api/: api.cpp  api.h  api_command.cpp  api_command.h  api_user.cpp  api_user.h
app/common/: dbconn.cpp  dbconn.h  steam_parser.cpp  steam_parser.h  weathercn_api.h
app/data/: apikey.h  group.cpp  group.h  user.cpp  user.h
cq_ref/: cqp.h  cqp_ex.cpp  cqp_ex.h  encoding.cpp  encoding.h  event_case_def.cpp  monopoly.cpp  simple_str.h  string_util.cpp  string_util.h  time_util.h
default/: apikey.yaml  case.yaml  config.yaml  monopoly_chance.yaml  user.yaml  weather.yaml  weatherMJ_cityID.db  weathercn_city.db
mirai/: CMakeLists.txt  api.cpp  api.h  http_conn.cpp  http_conn.h  msg.cpp  msg.h  pch.h  util.cpp  util.h  ws_conn.cpp  ws_conn.h
utils/: http_worker.hpp  logger.cpp  logger.h  rand.h  strutil.cpp  strutil.h
